feat(runs): retrieve logs
