# internal/deployserverclient/deployserver.go
@@ -2,7 +2,7 @@
 
 package deployserverclient
 
-// Generated from OpenAPI doc version 0.1.0 and generator version 2.721.0
+// Generated from OpenAPI doc version 0.1.0 and generator version 2.723.8
 
 import (
 	"bytes"
@@ -119,7 +119,7 @@ func New(opts ...SDKOption) *DeployServer {
 	sdk := &DeployServer{
 		SDKVersion: "0.0.1",
 		sdkConfiguration: config.SDKConfiguration{
-			UserAgent:  "speakeasy-sdk/go 0.0.1 2.721.0 0.1.0 github.com/formancehq/fctl/internal/deployserverclient",
+			UserAgent:  "speakeasy-sdk/go 0.0.1 2.723.8 0.1.0 github.com/formancehq/fctl/internal/deployserverclient",
 			ServerList: ServerList,
 		},
 		hooks: hooks.New(),
@@ -180,7 +180,7 @@ func (s *DeployServer) ListApps(ctx context.Context, organizationID string, page
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "listApps",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -400,7 +400,7 @@ func (s *DeployServer) CreateApp(ctx context.Context, request components.CreateA
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "createApp",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 	bodyReader, reqContentType, err := utils.SerializeRequestBody(ctx, request, false, false, "Request", "json", `request:"mediaType=application/json"`)
@@ -628,7 +628,7 @@ func (s *DeployServer) UpdateApp(ctx context.Context, id string, updateAppReques
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "updateApp",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 	bodyReader, reqContentType, err := utils.SerializeRequestBody(ctx, request, false, false, "UpdateAppRequest", "json", `request:"mediaType=application/json"`)
@@ -835,7 +835,7 @@ func (s *DeployServer) ReadApp(ctx context.Context, id string, opts ...operation
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readApp",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -1055,7 +1055,7 @@ func (s *DeployServer) DeleteApp(ctx context.Context, id string, opts ...operati
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "deleteApp",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -1255,7 +1255,7 @@ func (s *DeployServer) ReadAppCurrentStateVersion(ctx context.Context, id string
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readAppCurrentStateVersion",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -1477,7 +1477,7 @@ func (s *DeployServer) ReadAppVariables(ctx context.Context, id string, pageNumb
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readAppVariables",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -1702,7 +1702,7 @@ func (s *DeployServer) CreateAppVariable(ctx context.Context, id string, createV
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "createAppVariable",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 	bodyReader, reqContentType, err := utils.SerializeRequestBody(ctx, request, false, false, "CreateVariableRequest", "json", `request:"mediaType=application/json"`)
@@ -1930,7 +1930,7 @@ func (s *DeployServer) DeleteAppVariable(ctx context.Context, id string, variabl
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "deleteAppVariable",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -2132,7 +2132,7 @@ func (s *DeployServer) ReadAppRuns(ctx context.Context, id string, pageNumber *i
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readAppRuns",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -2358,7 +2358,7 @@ func (s *DeployServer) ReadAppVersions(ctx context.Context, id string, pageNumbe
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readAppVersions",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -2584,7 +2584,7 @@ func (s *DeployServer) ReadAppManifest(ctx context.Context, id string, from *ope
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readAppManifest",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -2806,7 +2806,7 @@ func (s *DeployServer) DeployAppConfigurationRaw(ctx context.Context, id string,
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "deployAppConfiguration_raw",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 	bodyReader, reqContentType, err := utils.SerializeRequestBody(ctx, request, false, false, "Application", "raw", `request:"mediaType=application/yaml"`)
@@ -3034,7 +3034,7 @@ func (s *DeployServer) DeployAppConfiguration(ctx context.Context, id string, ap
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "deployAppConfiguration",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 	bodyReader, reqContentType, err := utils.SerializeRequestBody(ctx, request, false, false, "Application", "json", `request:"mediaType=application/json"`)
@@ -3261,7 +3261,7 @@ func (s *DeployServer) ReadCurrentRun(ctx context.Context, id string, opts ...op
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readCurrentRun",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -3481,7 +3481,7 @@ func (s *DeployServer) ReadVersion(ctx context.Context, id string, opts ...opera
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readVersion",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -3701,7 +3701,7 @@ func (s *DeployServer) ReadRun(ctx context.Context, id string, opts ...operation
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readRun",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -3886,6 +3886,226 @@ func (s *DeployServer) ReadRun(ctx context.Context, id string, opts ...operation
 
 }
 
+// ReadRunLogs - Get logs of a run by its ID
+func (s *DeployServer) ReadRunLogs(ctx context.Context, id string, opts ...operations.Option) (*operations.ReadRunLogsResponse, error) {
+	request := operations.ReadRunLogsRequest{
+		ID: id,
+	}
+
+	o := operations.Options{}
+	supportedOptions := []string{
+		operations.SupportedOptionRetries,
+		operations.SupportedOptionTimeout,
+	}
+
+	for _, opt := range opts {
+		if err := opt(&o, supportedOptions...); err != nil {
+			return nil, fmt.Errorf("error applying option: %w", err)
+		}
+	}
+
+	var baseURL string
+	if o.ServerURL == nil {
+		baseURL = utils.ReplaceParameters(s.sdkConfiguration.GetServerDetails())
+	} else {
+		baseURL = *o.ServerURL
+	}
+	opURL, err := utils.GenerateURL(ctx, baseURL, "/runs/{id}/logs", request, nil)
+	if err != nil {
+		return nil, fmt.Errorf("error generating URL: %w", err)
+	}
+
+	hookCtx := hooks.HookContext{
+		SDK:              s,
+		SDKConfiguration: s.sdkConfiguration,
+		BaseURL:          baseURL,
+		Context:          ctx,
+		OperationID:      "readRunLogs",
+		OAuth2Scopes:     nil,
+		SecuritySource:   nil,
+	}
+
+	timeout := o.Timeout
+	if timeout == nil {
+		timeout = s.sdkConfiguration.Timeout
+	}
+
+	if timeout != nil {
+		var cancel context.CancelFunc
+		ctx, cancel = context.WithTimeout(ctx, *timeout)
+		defer cancel()
+	}
+
+	req, err := http.NewRequestWithContext(ctx, "GET", opURL, nil)
+	if err != nil {
+		return nil, fmt.Errorf("error creating request: %w", err)
+	}
+	req.Header.Set("Accept", "application/json")
+	req.Header.Set("User-Agent", s.sdkConfiguration.UserAgent)
+
+	for k, v := range o.SetHeaders {
+		req.Header.Set(k, v)
+	}
+
+	globalRetryConfig := s.sdkConfiguration.RetryConfig
+	retryConfig := o.Retries
+	if retryConfig == nil {
+		if globalRetryConfig != nil {
+			retryConfig = globalRetryConfig
+		}
+	}
+
+	var httpRes *http.Response
+	if retryConfig != nil {
+		httpRes, err = utils.Retry(ctx, utils.Retries{
+			Config: retryConfig,
+			StatusCodes: []string{
+				"429",
+				"500",
+				"502",
+				"503",
+				"504",
+			},
+		}, func() (*http.Response, error) {
+			if req.Body != nil && req.Body != http.NoBody && req.GetBody != nil {
+				copyBody, err := req.GetBody()
+
+				if err != nil {
+					return nil, err
+				}
+
+				req.Body = copyBody
+			}
+
+			req, err = s.hooks.BeforeRequest(hooks.BeforeRequestContext{HookContext: hookCtx}, req)
+			if err != nil {
+				if retry.IsPermanentError(err) || retry.IsTemporaryError(err) {
+					return nil, err
+				}
+
+				return nil, retry.Permanent(err)
+			}
+
+			httpRes, err := s.sdkConfiguration.Client.Do(req)
+			if err != nil || httpRes == nil {
+				if err != nil {
+					err = fmt.Errorf("error sending request: %w", err)
+				} else {
+					err = fmt.Errorf("error sending request: no response")
+				}
+
+				_, err = s.hooks.AfterError(hooks.AfterErrorContext{HookContext: hookCtx}, nil, err)
+			}
+			return httpRes, err
+		})
+
+		if err != nil {
+			return nil, err
+		} else {
+			httpRes, err = s.hooks.AfterSuccess(hooks.AfterSuccessContext{HookContext: hookCtx}, httpRes)
+			if err != nil {
+				return nil, err
+			}
+		}
+	} else {
+		req, err = s.hooks.BeforeRequest(hooks.BeforeRequestContext{HookContext: hookCtx}, req)
+		if err != nil {
+			return nil, err
+		}
+
+		httpRes, err = s.sdkConfiguration.Client.Do(req)
+		if err != nil || httpRes == nil {
+			if err != nil {
+				err = fmt.Errorf("error sending request: %w", err)
+			} else {
+				err = fmt.Errorf("error sending request: no response")
+			}
+
+			_, err = s.hooks.AfterError(hooks.AfterErrorContext{HookContext: hookCtx}, nil, err)
+			return nil, err
+		} else if utils.MatchStatusCodes([]string{"4XX", "5XX"}, httpRes.StatusCode) {
+			_httpRes, err := s.hooks.AfterError(hooks.AfterErrorContext{HookContext: hookCtx}, httpRes, nil)
+			if err != nil {
+				return nil, err
+			} else if _httpRes != nil {
+				httpRes = _httpRes
+			}
+		} else {
+			httpRes, err = s.hooks.AfterSuccess(hooks.AfterSuccessContext{HookContext: hookCtx}, httpRes)
+			if err != nil {
+				return nil, err
+			}
+		}
+	}
+
+	res := &operations.ReadRunLogsResponse{
+		HTTPMeta: components.HTTPMetadata{
+			Request:  req,
+			Response: httpRes,
+		},
+	}
+
+	switch {
+	case httpRes.StatusCode == 200:
+		switch {
+		case utils.MatchContentType(httpRes.Header.Get("Content-Type"), `application/json`):
+			rawBody, err := utils.ConsumeRawBody(httpRes)
+			if err != nil {
+				return nil, err
+			}
+
+			var out components.ReadLogsResponse
+			if err := utils.UnmarshalJsonFromResponseBody(bytes.NewBuffer(rawBody), &out, ""); err != nil {
+				return nil, err
+			}
+
+			res.ReadLogsResponse = &out
+		default:
+			rawBody, err := utils.ConsumeRawBody(httpRes)
+			if err != nil {
+				return nil, err
+			}
+			return nil, apierrors.NewAPIError(fmt.Sprintf("unknown content-type received: %s", httpRes.Header.Get("Content-Type")), httpRes.StatusCode, string(rawBody), httpRes)
+		}
+	case httpRes.StatusCode >= 400 && httpRes.StatusCode < 500:
+		rawBody, err := utils.ConsumeRawBody(httpRes)
+		if err != nil {
+			return nil, err
+		}
+		return nil, apierrors.NewAPIError("API error occurred", httpRes.StatusCode, string(rawBody), httpRes)
+	case httpRes.StatusCode >= 500 && httpRes.StatusCode < 600:
+		rawBody, err := utils.ConsumeRawBody(httpRes)
+		if err != nil {
+			return nil, err
+		}
+		return nil, apierrors.NewAPIError("API error occurred", httpRes.StatusCode, string(rawBody), httpRes)
+	default:
+		switch {
+		case utils.MatchContentType(httpRes.Header.Get("Content-Type"), `application/json`):
+			rawBody, err := utils.ConsumeRawBody(httpRes)
+			if err != nil {
+				return nil, err
+			}
+
+			var out components.Error
+			if err := utils.UnmarshalJsonFromResponseBody(bytes.NewBuffer(rawBody), &out, ""); err != nil {
+				return nil, err
+			}
+
+			res.Error = &out
+		default:
+			rawBody, err := utils.ConsumeRawBody(httpRes)
+			if err != nil {
+				return nil, err
+			}
+			return nil, apierrors.NewAPIError(fmt.Sprintf("unknown content-type received: %s", httpRes.Header.Get("Content-Type")), httpRes.StatusCode, string(rawBody), httpRes)
+		}
+	}
+
+	return res, nil
+
+}
+
 // ReadCurrentRunLogs - Get logs of the current run of an app
 func (s *DeployServer) ReadCurrentRunLogs(ctx context.Context, id string, opts ...operations.Option) (*operations.ReadCurrentRunLogsResponse, error) {
 	request := operations.ReadCurrentRunLogsRequest{
@@ -3921,7 +4141,7 @@ func (s *DeployServer) ReadCurrentRunLogs(ctx context.Context, id string, opts .
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readCurrentRunLogs",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -4141,7 +4361,7 @@ func (s *DeployServer) ReadCurrentAppVersion(ctx context.Context, id string, opt
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "readCurrentAppVersion",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
@@ -4362,7 +4582,7 @@ func (s *DeployServer) DownloadAppVersion(ctx context.Context, id string, opts .
 		BaseURL:          baseURL,
 		Context:          ctx,
 		OperationID:      "downloadAppVersion",
-		OAuth2Scopes:     []string{},
+		OAuth2Scopes:     nil,
 		SecuritySource:   nil,
 	}
 
