# internal/deployserverclient/models/operations/readrunlogs.go
@@ -1,0 +1,47 @@
+// Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+
+package operations
+
+import (
+	"github.com/formancehq/fctl/internal/deployserverclient/models/components"
+)
+
+type ReadRunLogsRequest struct {
+	ID string `pathParam:"style=simple,explode=false,name=id"`
+}
+
+func (r *ReadRunLogsRequest) GetID() string {
+	if r == nil {
+		return ""
+	}
+	return r.ID
+}
+
+type ReadRunLogsResponse struct {
+	HTTPMeta components.HTTPMetadata `json:"-"`
+	// Run logs retrieved successfully
+	ReadLogsResponse *components.ReadLogsResponse
+	// Error
+	Error *components.Error
+}
+
+func (r *ReadRunLogsResponse) GetHTTPMeta() components.HTTPMetadata {
+	if r == nil {
+		return components.HTTPMetadata{}
+	}
+	return r.HTTPMeta
+}
+
+func (r *ReadRunLogsResponse) GetReadLogsResponse() *components.ReadLogsResponse {
+	if r == nil {
+		return nil
+	}
+	return r.ReadLogsResponse
+}
+
+func (r *ReadRunLogsResponse) GetError() *components.Error {
+	if r == nil {
+		return nil
+	}
+	return r.Error
+}
